# budget-app

./: .gitignore  Makefile  README.md  setup.sh  tests.sh  todos.md
budget-app-api/: budget_app.py  requirements.txt
budget-app-api/models/: models.py
budget-app-api/services/: category_service.py  purchase_service.py  user_service.py
budget-app-api/utils/: user_utils.py
budget-app-ui/: package-lock.json  package.json
budget-app-ui/src/: App.js  home.js  index.css  login.js  register.js
budget-app-ui/src/components/: AuthProvider.js  CategoriesDisplay.js  CategoryCreator.js  Dashboard.js  DataContext.js  DisplayRecentPurchase.js  Login.js  NavBar.js  Overview.js  OverviewPurchasesGraph.js  PurchaseCreator.js  PurchaseDisplay.js  PurchasesGraph.js  Register.js  UserContext.js  home.js  (+4 more)
budget_app/: .env  Cargo.toml  budget.db
budget_app/migrations/2024-04-08-153332_create_categories/: up.sql
budget_app/migrations/2024-04-08-153339_create_purchases/: down.sql  up.sql
budget_app/migrations/2024-05-02-151514_create_users/: up.sql
budget_app/src/: config.rs  lib.rs  main.rs  models.rs  schema.rs
budget_app/src/config/: mod.rs  validate_token.rs
budget_app/src/routes/: auth_routes.rs  category_routes.rs  mod.rs  overage_routes.rs  purchase_routes.rs
budget_app/src/services/: auth_service.rs  category_service.rs  mod.rs  overages_service.rs  purchase_service.rs  register_service.rs  user_service.rs
budget_app/src/utils/: auth_utils.rs  category_utils.rs  mod.rs  month_utils.rs  overages_utils.rs  purchase_utils.rs  status_code_utils.rs  user_utils.rs
(+22 files in other folders)
