[workspace]


[package]
name = "budget_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
async-std = "1.12.0"
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"
chrono = "0.4.37"
tracing-subscriber = "0.3.18"
serde_json = "1.0.115"
